@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-22T00:47:20Z",
+  "timestamp" : "2024-08-25T00:51:38Z",
   "count_outdated" : 1320,
   "uniques_outdated" : 845,
-  "count" : 1323,
-  "uniques" : 848,
+  "count" : 1324,
+  "uniques" : 849,
   "clones" : [
     {
       "timestamp": "2024-08-20T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-08-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
