@@ -1,3 +1,12 @@
+2024-08-25T00:51:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10542807482 # 398
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-25
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 845 1320 / 848 1323
+* notice: next accum: outdated-unq outdated-all / unq all: 845 1320 / 849 1324
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-08-24]
+
 2024-08-22T00:47:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10499800870 # 395
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-22
